@@ -1,5 +1,8 @@
 = ActiveMerchant CHANGELOG
 
+* Orbital: Allow AVS parts to be sent sans country [duff]
+
+
 == Version 1.58.0 (March 1, 2016)
 * Move Electron check out of CreditCard into CreditCardMethods [ThereExistsX]
 * CardStream: Add AED and NZD currencies [sdball]
